--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs": "^1.7.4",
-    "@tensorflow/tfjs-node": "^1.7.4"
+    "@tensorflow/tfjs-node": "^1.7.4",
+    "@tensorflow/tfjs-vis": "^1.4.0",
+    "domino": "^2.1.5",
+    "window-or-global": "^1.0.1"
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "^0.9.0"
   }
 }
