--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "window-or-global": "^1.0.1"
   },
   "devDependencies": {
-    "mini-css-extract-plugin": "^0.9.0"
+    "mini-css-extract-plugin": "^0.9.0",
+    "body-parser": "1.19.0",
+    "express": "4.17.1"
   }
 }
